Fixed non-chart page no overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,7 +23,7 @@ body {
   color: #fafafa;
   font-size: 14px;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
